New razor components added

--- a/BlazorMovie/Client/BlazorMovie.Client.csproj
+++ b/BlazorMovie/Client/BlazorMovie.Client.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
